tune agent config